force-app/main/default/objects/df_journal_dk_new__c/fields/gtepagt_pension_omf_ordn__c.field-meta.xml
<CustomField>
    <fullName>gtepagt_pension_omf_ordn__c</fullName>
    <label>Omfattede pensions- og forsikrin 44e19</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>gtepagt_pension_omf_generelt</fullName>
                <label>Generelt</label>
            </value>
            <value>
                <fullName>gtepagt_pension_omf_specifikke</fullName>
                <label>Specifikke ordninger</label>
            </value>
            <value>
                <fullName>gtepagt_pension_omf_overskud</fullName>
                <label>Overskudsdeling</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>