force-app/main/default/objects/df_journal_dk_new__c/fields/gtepagt_pensionsdeling__c.field-meta.xml
<CustomField>
    <fullName>gtepagt_pensionsdeling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ønskes pensionsdeling?</label>
    <type>Checkbox</type>
</CustomField>