force-app/main/default/objects/df_journal_dk_new__c/fields/gtepagt_skal_snart_giftes__c.field-meta.xml
<CustomField>
    <fullName>gtepagt_skal_snart_giftes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vi skal snart giftes</label>
    <type>Checkbox</type>
</CustomField>