force-app/main/default/objects/df_journal_dk_new__c/fields/gtepagt_sreje_aftrap_procent__c.field-meta.xml
<CustomField>
    <fullName>gtepagt_sreje_aftrap_procent__c</fullName>
    <label>Årlig procentaftraptning</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>