force-app/main/default/objects/df_journal_dk_new__c/fields/gtepagt_sreje_andel_brker__c.field-meta.xml
<CustomField>
    <fullName>gtepagt_sreje_andel_brker__c</fullName>
    <label>Angiv andel i brøker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>