force-app/main/default/objects/df_journal_dk_new__c/fields/gtepagt_sreje_andel_brker_ddsfld__c.field-meta.xml
<CustomField>
    <fullName>gtepagt_sreje_andel_brker_ddsfld__c</fullName>
    <label>Fordeling ved dødsfald</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>gtepagt_sreje_brkdel_forbl_sreje</fullName>
                <label>Brøkdelen forbliver fuldstændigt særeje</label>
            </value>
            <value>
                <fullName>gtepagt_sreje_brkdel_dlingsfrmue</fullName>
                <label>Alt bliver til delingsformue</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>