force-app/main/default/objects/df_journal_dk_new__c/fields/gtepagt_sreje_form__c.field-meta.xml
<CustomField>
    <fullName>gtepagt_sreje_form__c</fullName>
    <label>Særejeform</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>gtepagt_sreje_kombi</fullName>
                <label>Kombinationssæreje</label>
            </value>
            <value>
                <fullName>gtepagt_sreje_fuldstndigt</fullName>
                <label>Fuldstændigt særeje</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>