force-app/main/default/objects/df_journal_dk_new__c/fields/gtepagt_sreje_lbetid__c.field-meta.xml
<CustomField>
    <fullName>gtepagt_sreje_lbetid__c</fullName>
    <label>Særejets løbetid</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>gtepagt_sreje_resten_af_livet</fullName>
                <label>Særejet skal gælde resten af livet</label>
            </value>
            <value>
                <fullName>gtepagt_sreje_tidsbegrnset</fullName>
                <label>Særejet skal være tidsbegrænset</label>
            </value>
            <value>
                <fullName>gtepagt_sreje_aftrappes</fullName>
                <label>Særejet skal aftrappes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>