force-app/main/default/objects/df_journal_dk_new__c/fields/gtepagt_sreje_omfang__c.field-meta.xml
<CustomField>
    <fullName>gtepagt_sreje_omfang__c</fullName>
    <label>Ægtepagtens omfang</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>gtepagt_sreje_sumdel</fullName>
                <label>Sumdeling</label>
            </value>
            <value>
                <fullName>gtepagt_sreje_omf_alt</fullName>
                <label>Alt skal omfattes</label>
            </value>
            <value>
                <fullName>gtepagt_sreje_omf_fr_gteskab</fullName>
                <label>Kun hvad vi ejede/ejer før ægteskabet</label>
            </value>
            <value>
                <fullName>gtepagt_sreje_omf_specifik</fullName>
                <label>Kun specifikke aktiver</label>
            </value>
            <value>
                <fullName>gtepagt_sreje_omf_andel</fullName>
                <label>En bestemt andel</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>