force-app/main/default/objects/df_journal_dk_new__c/fields/gtepagt_sreje_overgang_flleseje__c.field-meta.xml
<CustomField>
    <fullName>gtepagt_sreje_overgang_flleseje__c</fullName>
    <label>Dato for hvornår særejet skal ov d81b0</label>
    <type>DateTime</type>
</CustomField>