force-app/main/default/objects/df_journal_dk_new__c/fields/gtepagt_sumdeling__c.field-meta.xml
<CustomField>
    <fullName>gtepagt_sumdeling__c</fullName>
    <label>Sumdeling</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>gtepagt_sumdeling_nej</fullName>
                <label>Der skal ikke tilføjes sumdeling</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>