force-app/main/default/objects/df_journal_dk_new__c/fields/gtepagt_tilf_spec_akt_p2__c.field-meta.xml
<CustomField>
    <fullName>gtepagt_tilf_spec_akt_p2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tilføj specificerede aktiver for eedba</label>
    <type>Checkbox</type>
</CustomField>