force-app/main/default/objects/df_journal_dk_new__c/fields/gteskab_bryllupsdag__c.field-meta.xml
<CustomField>
    <fullName>gteskab_bryllupsdag__c</fullName>
    <label>Bryllupsdag</label>
    <type>DateTime</type>
</CustomField>