force-app/main/default/objects/df_journal_dk_new__c/fields/gteskab_bryllupsdag_txt__c.field-meta.xml
<CustomField>
    <fullName>gteskab_bryllupsdag_txt__c</fullName>
    <label>Bryllupsdag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>