force-app/main/default/objects/df_journal_dk_new__c/fields/gteskab_gteskabstype__c.field-meta.xml
<CustomField>
    <fullName>gteskab_gteskabstype__c</fullName>
    <label>Ægteskabstype</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>gteskab_gtepagt_sreje</fullName>
                <label>Ægtepagt / Særeje</label>
            </value>
            <value>
                <fullName>gteskab_alm_formueflls</fullName>
                <label>Almindeligt Formuefællesskab</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>