force-app/main/default/objects/df_journal_dk_new__c/fields/har_du_i_brn__c.field-meta.xml
<CustomField>
    <fullName>har_du_i_brn__c</fullName>
    <label>Har du/I børn?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>brn_ja_flles_brn</fullName>
                <label>Ja, kun fælles børn</label>
            </value>
            <value>
                <fullName>brn_ja_sammenbragte_brn</fullName>
                <label>Ja, sammenbragte børn</label>
            </value>
            <value>
                <fullName>brn_nej_ingen_brn</fullName>
                <label>Nej, ingen børn</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>