force-app/main/default/objects/df_journal_dk_new__c/fields/har_du_i_mere_end_t_barn__c.field-meta.xml
<CustomField>
    <fullName>har_du_i_mere_end_t_barn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Har du/I mere end ét barn?</label>
    <type>Checkbox</type>
</CustomField>