force-app/main/default/objects/df_journal_dk_new__c/fields/har_lst_obl_afsl__c.field-meta.xml
<CustomField>
    <fullName>har_lst_obl_afsl__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Jeg har læst obligatorisk afslut a5709</label>
    <type>Checkbox</type>
</CustomField>