force-app/main/default/objects/df_journal_dk_new__c/fields/har_person_1_srbrn__c.field-meta.xml
<CustomField>
    <fullName>har_person_1_srbrn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Har Person 1 særbørn?</label>
    <type>Checkbox</type>
</CustomField>