force-app/main/default/objects/df_journal_dk_new__c/fields/har_person_2_srbrn__c.field-meta.xml
<CustomField>
    <fullName>har_person_2_srbrn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Har Person 2 særbørn?</label>
    <type>Checkbox</type>
</CustomField>