force-app/main/default/objects/df_journal_dk_new__c/fields/Has_Children__c.field-meta.xml
<CustomField>
    <fullName>Has_Children__c</fullName>
    <formula>OR(
    single_har_du_brn__c = TRUE,
    OR(
        ISPICKVAL(har_du_i_brn__c, &quot;brn_ja_flles_brn&quot;),
        ISPICKVAL(har_du_i_brn__c, &quot;brn_ja_sammenbragte_brn&quot;)
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Children</label>
    <type>Checkbox</type>
</CustomField>