force-app/main/default/objects/df_journal_dk_new__c/fields/indst_gruppret_sumlegat__c.field-meta.xml
<CustomField>
    <fullName>indst_gruppret_sumlegat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indsæt gruppérede sumlegat(er)</label>
    <type>Checkbox</type>
</CustomField>