force-app/main/default/objects/df_journal_dk_new__c/fields/indst_paragraf_om_beboelsesret__c.field-meta.xml
<CustomField>
    <fullName>indst_paragraf_om_beboelsesret__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indsæt paragraf om beboelsesret</label>
    <type>Checkbox</type>
</CustomField>