force-app/main/default/objects/df_journal_dk_new__c/fields/indtast_honorbarbelb__c.field-meta.xml
<CustomField>
    <fullName>indtast_honorbarbelb__c</fullName>
    <label>Indtast honorbarbeløb</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>