force-app/main/default/objects/df_journal_dk_new__c/fields/kodicil__c.field-meta.xml
<CustomField>
    <fullName>kodicil__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kodicil</label>
    <type>Checkbox</type>
</CustomField>