force-app/main/default/objects/df_journal_dk_new__c/fields/kodicilets_indhold__c.field-meta.xml
<CustomField>
    <fullName>kodicilets_indhold__c</fullName>
    <label>Kodicilets indhold</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>