force-app/main/default/objects/df_journal_dk_new__c/fields/livsvarig_el_tidsbest_beboelsesr_430__c.field-meta.xml
<CustomField>
    <fullName>livsvarig_el_tidsbest_beboelsesr_430__c</fullName>
    <label>Livsvarig eller tidsbestemt bebo 4f3b2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>beboelsesret_livsvarig</fullName>
                <label>Livsvarig beboelsesret</label>
            </value>
            <value>
                <fullName>beboelsesret_tidsbestemt</fullName>
                <label>Tidsbestemt beboelsesret</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>