force-app/main/default/objects/df_journal_dk_new__c/fields/midl_note_begunst__c.field-meta.xml
<CustomField>
    <fullName>midl_note_begunst__c</fullName>
    <label>Midlertigt notefelt, indtil bånd 4a30c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>