force-app/main/default/objects/df_journal_dk_new__c/fields/noter_skrddersyet_ff_p2__c.field-meta.xml
<CustomField>
    <fullName>noter_skrddersyet_ff_p2__c</fullName>
    <label>Noter til skræddersyet fremtidsf 81e33</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>