force-app/main/default/objects/df_journal_dk_new__c/fields/noter_skrddersyet_testamente__c.field-meta.xml
<CustomField>
    <fullName>noter_skrddersyet_testamente__c</fullName>
    <label>Noter til skræddersyet testament 7407b</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>