force-app/main/default/objects/df_journal_dk_new__c/fields/nsker_kunden_at_give_gavekort__c.field-meta.xml
<CustomField>
    <fullName>nsker_kunden_at_give_gavekort__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ønsker kunden at give et gavekor b8722</label>
    <type>Checkbox</type>
</CustomField>