force-app/main/default/objects/df_journal_dk_new__c/fields/opr_genfuldm_p1__c.field-meta.xml
<CustomField>
    <fullName>opr_genfuldm_p1__c</fullName>
    <label>Skal Person 1 oprette en general 52ca5</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>