force-app/main/default/objects/df_journal_dk_new__c/fields/opr_genfuldm_p2__c.field-meta.xml
<CustomField>
    <fullName>opr_genfuldm_p2__c</fullName>
    <label>Skal Person 2 oprette en general daca7</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>p2_opr_genfuldm_til_p1</fullName>
                <label>Ja, til Person 1</label>
            </value>
            <value>
                <fullName>p2_opr_genfuldm_til_anden</fullName>
                <label>Ja, til anden person</label>
            </value>
            <value>
                <fullName>p1_opr_genfuldm_nej</fullName>
                <label>Nej</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>