force-app/main/default/objects/df_journal_dk_new__c/fields/p1_dato_tidl_testa__c.field-meta.xml
<CustomField>
    <fullName>p1_dato_tidl_testa__c</fullName>
    <label>Dato for underskrivelse af tidli 7ec52</label>
    <type>DateTime</type>
</CustomField>