force-app/main/default/objects/df_journal_dk_new__c/fields/p1_ff_afgiftsfrie_gaver__c.field-meta.xml
<CustomField>
    <fullName>p1_ff_afgiftsfrie_gaver__c</fullName>
    <label>Afgiftsfrie gaver</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>p1_ff_afgiftsfrie_yes</fullName>
                <label>Ja</label>
            </value>
            <value>
                <fullName>p1_ff_afgiftsfrie_ja_lige</fullName>
                <label>Ja, hvis ligedeling mellem børn</label>
            </value>
            <value>
                <fullName>p1_ff_afgiftsfrie_nej</fullName>
                <label>Nej</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>