force-app/main/default/objects/df_journal_dk_new__c/fields/p1_ff_gaver__c.field-meta.xml
<CustomField>
    <fullName>p1_ff_gaver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gaver</label>
    <type>Checkbox</type>
</CustomField>