force-app/main/default/objects/df_journal_dk_new__c/fields/p1_opr_genfuldm__c.field-meta.xml
<CustomField>
    <fullName>p1_opr_genfuldm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opretter Person 1 en generalfuld 7d23e</label>
    <type>Checkbox</type>
</CustomField>