force-app/main/default/objects/df_journal_dk_new__c/fields/p1_telefon__c.field-meta.xml
<CustomField>
    <fullName>p1_telefon__c</fullName>
    <label>Telefonnummer på Person 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>