force-app/main/default/objects/df_journal_dk_new__c/fields/p1_underskr_retskreds__c.field-meta.xml
<CustomField>
    <fullName>p1_underskr_retskreds__c</fullName>
    <label>Underskrevet i retskreds</label>
    <length>255</length>
    <type>Text</type>
</CustomField>