force-app/main/default/objects/df_journal_dk_new__c/fields/p2_dato_tidl_testa_txt__c.field-meta.xml
<CustomField>
    <fullName>p2_dato_tidl_testa_txt__c</fullName>
    <label>Dato for underskrivelse af tidli 7ec52</label>
    <length>255</length>
    <type>Text</type>
</CustomField>