force-app/main/default/objects/df_journal_dk_new__c/fields/p2_efternavn__c.field-meta.xml
<CustomField>
    <fullName>p2_efternavn__c</fullName>
    <label>Efternavn på Person 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>