force-app/main/default/objects/df_journal_dk_new__c/fields/p2_ff_begrns_ansv__c.field-meta.xml
<CustomField>
    <fullName>p2_ff_begrns_ansv__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Begrænsede ansvarsområder</label>
    <type>Checkbox</type>
</CustomField>