force-app/main/default/objects/df_journal_dk_new__c/fields/p2_ff_gaver_til_velgrenhed__c.field-meta.xml
<CustomField>
    <fullName>p2_ff_gaver_til_velgrenhed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gaver til velgørenhed</label>
    <type>Checkbox</type>
</CustomField>