force-app/main/default/objects/df_journal_dk_new__c/fields/p2_ff_honorarbelb__c.field-meta.xml
<CustomField>
    <fullName>p2_ff_honorarbelb__c</fullName>
    <label>Indtast honorarbeløb</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>