force-app/main/default/objects/df_journal_dk_new__c/fields/p2_ff_ingen_gaver__c.field-meta.xml
<CustomField>
    <fullName>p2_ff_ingen_gaver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fuldmægtigen skal ikke kunne giv f9213</label>
    <type>Checkbox</type>
</CustomField>