force-app/main/default/objects/df_journal_dk_new__c/fields/p2_ff_rligt_honorar__c.field-meta.xml
<CustomField>
    <fullName>p2_ff_rligt_honorar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Giv fuldmægtig årligt honorar</label>
    <type>Checkbox</type>
</CustomField>