force-app/main/default/objects/df_journal_dk_new__c/fields/p2_ff_subs_fuldm__c.field-meta.xml
<CustomField>
    <fullName>p2_ff_subs_fuldm__c</fullName>
    <label>Subsidiære fuldmægtige</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>