force-app/main/default/objects/df_journal_dk_new__c/fields/p2_ff_tilladelse_til_gpssporing__c.field-meta.xml
<CustomField>
    <fullName>p2_ff_tilladelse_til_gpssporing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tilladelse til GPS-sporing</label>
    <type>Checkbox</type>
</CustomField>