force-app/main/default/objects/df_journal_dk_new__c/fields/p2_ff_virksomhedsforhold_pl__c.field-meta.xml
<CustomField>
    <fullName>p2_ff_virksomhedsforhold_pl__c</fullName>
    <label>Virksomhedsforhold</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>p2_ff_virkfor_evt_fremt</fullName>
                <label>Ja, tilføj evt. fremtidig virksomhed</label>
            </value>
            <value>
                <fullName>p2_ff_virkfor_ingen_virk</fullName>
                <label>Person 2 driver ikke virksomhed</label>
            </value>
            <value>
                <fullName>p2_ff_virkfor_ja</fullName>
                <label>Ja, virksomhed(er) skal indgå i fuldmagten</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>