force-app/main/default/objects/df_journal_dk_new__c/fields/p2_opr_genfuldm__c.field-meta.xml
<CustomField>
    <fullName>p2_opr_genfuldm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opretter Person 2 en generalfuld 56f89</label>
    <type>Checkbox</type>
</CustomField>