force-app/main/default/objects/df_journal_dk_new__c/fields/pl_tidl_opr_testa__c.field-meta.xml
<CustomField>
    <fullName>pl_tidl_opr_testa__c</fullName>
    <label>Tidligere oprettet testamente</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>tidl_testa_nej</fullName>
                <label>Der er ikke tidligere oprettet et testamente</label>
            </value>
            <value>
                <fullName>tidl_testa_p1</fullName>
                <label>Person 1 har tidligere oprettet testamente</label>
            </value>
            <value>
                <fullName>tidl_testa_p2</fullName>
                <label>Person 2 har tidligere oprettet testamente</label>
            </value>
            <value>
                <fullName>tidl_testa_begge_hver_sit</fullName>
                <label>Begge har oprettet hver sit testamente</label>
            </value>
            <value>
                <fullName>tidl_testa_sammen</fullName>
                <label>Har tidligere oprettet testamente sammen</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>