force-app/main/default/objects/df_journal_dk_new__c/fields/primr_begunstiget_p2__c.field-meta.xml
<CustomField>
    <fullName>primr_begunstiget_p2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primær begunstiget</label>
    <referenceTo>df_160_person__c</referenceTo>
    <relationshipLabel>primr_begunstiget_p2</relationshipLabel>
    <relationshipName>primr_begunstiget_p2</relationshipName>
    <type>Lookup</type>
</CustomField>