force-app/main/default/objects/df_journal_dk_new__c/fields/produkter_ordrerabat__c.field-meta.xml
<CustomField>
    <fullName>produkter_ordrerabat__c</fullName>
    <label>Ordrerabat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>