force-app/main/default/objects/df_journal_dk_new__c/fields/sameje_andelsbolignr__c.field-meta.xml
<CustomField>
    <fullName>sameje_andelsbolignr__c</fullName>
    <label>Andelsbolignummer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>